k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
