k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: backend
  labels:
    app: app-deployment
spec:
  type: ClusterIP
  selector:
    app: app-deployment
  ports:
    - name: http
      port: 80
      targetPort: 8080
